tests/paczka1/fuzzy1/25850884.err
Error in line 18: iXls1m6Ii A362 19,5
Error in line 20: iXls1m6Ii A930 85,4
Error in line 30: mu1i1X3EZ S762 99,1
Error in line 36: mu1i1X3èZ A199 12,7
Error in line 34: qWn S762 62,2
Error in line 37: qWn A930 18,2
Error in line 32: 1yYtYj0oIN A930 17,2
